For the final ICE 4

--- a/COMP2139-Labs/Areas/ProjectManagement/Views/Projects/Details.cshtml
+++ b/COMP2139-Labs/Areas/ProjectManagement/Views/Projects/Details.cshtml
@@ -69,9 +69,9 @@
 </div>
 @section Scripts {
     <script src="~/js/projectComments.js"></script>
-    <script>
+    @* <script>
         $(document).ready(function () {
-            initializeProjectComments(@Model.ProjectId);
+            // initializeProjectComments(@Model.ProjectId);
         })
-    </script>
+    </script> *@
 }
