--- a/COMP2139-Labs/Areas/ProjectManagement/Views/Projects/Index.cshtml
+++ b/COMP2139-Labs/Areas/ProjectManagement/Views/Projects/Index.cshtml
@@ -13,6 +13,12 @@
 
 <h2>Projects</h2>
 
+<!-- Week 14 -->
+@* <h1>
+    my session variable : @ViewBag.mysession
+</h1> *@
+<!---------------------------------------------------->
+
 @if (Model.Any()) // If there's any projects to display
 {
     <table class="table">
