--- a/COMP2139-Labs/Views/Home/Index.cshtml
+++ b/COMP2139-Labs/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "COMP 2139";
 }
-
+@* <p>You have visited this page @visitCount times</p> *@ <!-- Week 14 -->
 <div class="text-center">
     <h1 class="display-4">COMP2139 Labs - Home Page</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
